--- a/lab_1/main.ipynb
+++ b/lab_1/main.ipynb
@@ -42,113 +42,6 @@
     "\n",
     "\n",
     "'''\n",
-    "Вычисление матрицы ковариаций признаков\n",
-    "'''\n",
-    "def params_cov(X, mu_hat):\n",
-    "    n, p = X.shape\n",
-    "    S = np.zeros((p, p))\n",
-    "\n",
-    "    def s(l, j):\n",
-    "        s = 0\n",
-    "\n",
-    "        for i in range(n):\n",
-    "            s += (X[i][l] - mu_hat[l]) * (X[i][j] - mu_hat[j])\n",
-    "\n",
-    "        return s / (n - 1)\n",
-    "\n",
-    "    for l in range(p):\n",
-    "        for j in range(p):\n",
-    "            S[l][j] = s(l, j)\n",
-    "\n",
-    "    return S\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "Вычисление оценки выборочного среднего по признакам\n",
-    "'''\n",
-    "def mu_hat(X):\n",
-    "    return np.mean(X, axis=0)\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "Вычисление вектора оценок значений ДФ (значение оценки для каждого вектора из выборки X)\n",
-    "'''\n",
-    "def DF_values(a, X):\n",
-    "    n = X.shape[0]\n",
-    "    z = np.empty((n, 1))\n",
-    "\n",
-    "    for i in range(n):\n",
-    "        z[i] = np.dot(a, X[i])\n",
-    "\n",
-    "    return z\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "Оценка матрицы среднеквадратичных отклонений\n",
-    "'''\n",
-    "def get_s_z_sqr(a, S):\n",
-    "    p = S.shape[0]\n",
-    "    s = 0\n",
-    "\n",
-    "    for l in range(p):\n",
-    "        for j in range(p):\n",
-    "            s += a[l] * S[l][j] * a[j]\n",
-    "\n",
-    "    return s\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "Смещённая оценка расстояния Махаланобиса\n",
-    "'''\n",
-    "def Mahalanobis_distance(z1_mean, z2_mean, s_z_sqr):\n",
-    "    return ((z1_mean - z2_mean)**2) / s_z_sqr\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "Несмещённая оценка расстояния Махаланобиса\n",
-    "'''\n",
-    "def displaced_Mahalanobis_distance(n1, n2, D_sqr, p):\n",
-    "    return ((n1 + n2 - p - 3) / (n1 + n2 - 2)) * D_sqr - p * (1 / n1 + 1 / n2)\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "Функция Лапласа Ф(x)\n",
-    "'''\n",
-    "def F(x):\n",
-    "    return norm.cdf(x)\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "Получение и считывание данных из файла в двумерный список int'ов\n",
-    "'''\n",
-    "def parse_file(filename):\n",
-    "    arr = []\n",
-    "\n",
-    "    with open(filename) as file:\n",
-    "        for line in file:\n",
-    "            arr.append(list(map(int, line.strip().split())))\n",
-    "\n",
-    "    return arr\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "Разделение выборки X из репозитория на X1 (вектора из 1-го класса) и X2 (из 2-го)\n",
-    "'''\n",
-    "def split_X(X, arr, offset=0):\n",
-    "    p = X.shape[1]\n",
-    "    X1 = np.empty((0, p))\n",
-    "    X2 = np.empty((0, p))\n",
-    "\n",
-    "    for i in range(len(X)):\n",
-    "        if arr[i + offset][-1] == 1:\n",
-    "            X1 = np.append(X1, [X[i]], axis=0)\n",
-    "        else:\n",
-    "            X2 = np.append(X2, [X[i]], axis=0)\n",
-    "\n",
-    "    return X1, X2\n",
-    "\n",
-    "\n",
-    "'''\n",
     "Анализ обучающих и тестовых выборок\n",
     "'''\n",
     "def analyze(X1, X2, test_part_1, test_part_2, title):\n",
@@ -159,10 +52,18 @@
     "        print('mu_hat2 = ' + str(mu_hat2))\n",
     "        print()\n",
     "        \n",
+    "    # Вычисление матрицы ковариаций\n",
+    "    def cov_matrix(X):\n",
+    "        return np.cov(X.T)\n",
+    "    \n",
+    "    # Вычисление оценки выборочного среднего\n",
+    "    def mu_hat(X):\n",
+    "        return np.mean(X, axis=0)\n",
+    "    \n",
     "    # Выборочная S\n",
     "    def print_S():\n",
-    "        print('Выборочная матрица ковариаций:')\n",
-    "        print('S = \\n' + str(S))\n",
+    "        print('Выборочная матрица ковариаций S:')\n",
+    "        print(S)\n",
     "        print()\n",
     "    \n",
     "    # Оценка вектора alpha\n",
@@ -170,6 +71,27 @@
     "        print('Оценка вектора параметров ДФ:')\n",
     "        print('a = ' + str(a))\n",
     "        print()\n",
+    "    \n",
+    "    # Вычисление вектора оценок значений ДФ (значение оценки для каждого вектора из выборки X)\n",
+    "    def DF_values(a, X):\n",
+    "        n = X.shape[0]\n",
+    "        z = np.empty((n, 1))\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            z[i] = np.dot(a, X[i])\n",
+    "\n",
+    "        return z\n",
+    "    \n",
+    "    # Оценка выборочной несмещённой дисперсии\n",
+    "    def get_s_z_sqr(a, S):\n",
+    "        p = S.shape[0]\n",
+    "        s = 0\n",
+    "\n",
+    "        for l in range(p):\n",
+    "            for j in range(p):\n",
+    "                s += a[l] * S[l][j] * a[j]\n",
+    "\n",
+    "        return s\n",
     "        \n",
     "    # Выборочные средние значения ДФ\n",
     "    def print_z_mean():\n",
@@ -183,6 +105,14 @@
     "        print('Выборочная несмещённая дисперсия:')\n",
     "        print('s_z_sqr = ' + str(s_z_sqr))\n",
     "        print()\n",
+    "       \n",
+    "    # Смещённая оценка расстояния Махаланобиса\n",
+    "    def Mahalanobis_distance(z1_mean, z2_mean, s_z_sqr):\n",
+    "        return ((z1_mean - z2_mean)**2) / s_z_sqr\n",
+    "\n",
+    "    # Несмещённая оценка расстояния Махаланобиса\n",
+    "    def displaced_Mahalanobis_distance(n1, n2, D_sqr, p):\n",
+    "        return ((n1 + n2 - p - 3) / (n1 + n2 - 2)) * D_sqr - p * (1 / n1 + 1 / n2)\n",
     "        \n",
     "    # Оценки расстояния Махаланобиса\n",
     "    def print_D():\n",
@@ -193,6 +123,10 @@
     "        print('Несмещённая оценка расстояния Махаланобиса')\n",
     "        print('D_H_sqr = ' + str(D_H_sqr))\n",
     "        print()\n",
+    "        \n",
+    "    # Функция Лапласа Ф(x)\n",
+    "    def F(x):\n",
+    "        return norm.cdf(x)\n",
     "    \n",
     "    # Матрица соответствий\n",
     "    def display_correspondence_table(z1, z2):\n",
@@ -238,8 +172,8 @@
     "    mu_hat2 = mu_hat(X2)\n",
     "    print_mu_hat()\n",
     "    \n",
-    "    S1 = params_cov(X1, mu_hat1)\n",
-    "    S2 = params_cov(X2, mu_hat2)\n",
+    "    S1 = cov_matrix(X1)\n",
+    "    S2 = cov_matrix(X2)\n",
     "    S = ((n1 - 1) * S1 + (n2 - 1) * S2) / (n1 + n2 - 2)\n",
     "    print_S()\n",
     "\n",
@@ -268,6 +202,7 @@
     "    print_P_hat()\n",
     "\n",
     "    print('Тестовая выборка\\n')\n",
+    "    \n",
     "    test_table = display_correspondence_table(test_part_1_z, test_part_2_z)\n",
     "    print_P_table(test_table)"
    ]
@@ -292,8 +227,7 @@
       "mu_hat1 = [-0.05777405  0.86015499  0.84656897]\n",
       "mu_hat2 = [ 8.02021642  9.99600578 10.08433936]\n",
       "\n",
-      "Выборочная матрица ковариаций:\n",
-      "S = \n",
+      "Выборочная матрица ковариаций S:\n",
       "[[1.49109604 0.89820765 1.04830122]\n",
       " [0.89820765 1.85675611 1.87657338]\n",
       " [1.04830122 1.87657338 3.31858028]]\n",
@@ -306,13 +240,13 @@
       "z2_mean = -60.3624886562958\n",
       "\n",
       "Выборочная несмещённая дисперсия:\n",
-      "s_z_sqr = 57.78489908873001\n",
+      "s_z_sqr = 57.78489908873\n",
       "\n",
       "Смещённая оценка расстояния Махаланобиса:\n",
-      "D_sqr = 57.78489908873006\n",
+      "D_sqr = 57.784899088730064\n",
       "\n",
       "Несмещённая оценка расстояния Махаланобиса\n",
-      "D_H_sqr = 57.53901057248551\n",
+      "D_H_sqr = 57.539010572485516\n",
       "\n"
      ]
     },
@@ -320,7 +254,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-2-412dfaa44cbf>:8: RuntimeWarning: covariance is not positive-semidefinite.\n",
+      "<ipython-input-2-92fd3cd15884>:8: RuntimeWarning: covariance is not positive-semidefinite.\n",
       "  return np.random.multivariate_normal(mean=mean, cov=Sigma, size=size)\n"
      ]
     },
@@ -498,8 +432,7 @@
       "mu_hat1 = [ 1.09991293  0.13636207 -1.80682513]\n",
       "mu_hat2 = [2.1648783  0.35765952 3.2334832 ]\n",
       "\n",
-      "Выборочная матрица ковариаций:\n",
-      "S = \n",
+      "Выборочная матрица ковариаций S:\n",
       "[[ 6.80322235  3.06046832  6.27993361]\n",
       " [ 3.06046832  4.43325411  4.28506575]\n",
       " [ 6.27993361  4.28506575 10.96010403]]\n",
@@ -508,17 +441,17 @@
       "a = [ 0.46845784  0.53148503 -0.93608973]\n",
       "\n",
       "Выборочные средние значения ДФ (векторы z):\n",
-      "z1_mean = 2.27908767876975\n",
-      "z2_mean = -1.82258550074471\n",
+      "z1_mean = 2.2790876787697436\n",
+      "z2_mean = -1.8225855007447112\n",
       "\n",
       "Выборочная несмещённая дисперсия:\n",
-      "s_z_sqr = 4.10167317951446\n",
+      "s_z_sqr = 4.1016731795144565\n",
       "\n",
       "Смещённая оценка расстояния Махаланобиса:\n",
-      "D_sqr = 4.10167317951446\n",
+      "D_sqr = 4.101673179514453\n",
       "\n",
       "Несмещённая оценка расстояния Махаланобиса\n",
-      "D_H_sqr = 4.066483607652679\n",
+      "D_H_sqr = 4.066483607652672\n",
       "\n"
      ]
     },
@@ -526,7 +459,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-2-412dfaa44cbf>:8: RuntimeWarning: covariance is not positive-semidefinite.\n",
+      "<ipython-input-2-92fd3cd15884>:8: RuntimeWarning: covariance is not positive-semidefinite.\n",
       "  return np.random.multivariate_normal(mean=mean, cov=Sigma, size=size)\n"
      ]
     },
@@ -590,8 +523,8 @@
       "P(1|2) = 0.365\n",
       "\n",
       "Теоретические оценки вероятности ошибочной классификации:\n",
-      "P^(2|1) = 0.04496814798136526\n",
-      "P^(1|2) = 0.37417394605167403\n",
+      "P^(2|1) = 0.044968147981365295\n",
+      "P^(1|2) = 0.3741739460516746\n",
       "\n",
       "Тестовая выборка\n",
       "\n"
@@ -714,15 +647,8 @@
       " 1.15246637e+00 1.37219731e+00 1.00896861e+00 2.91479821e-01\n",
       " 4.93273543e-02 9.05829596e-01 6.27802691e-02 2.28699552e-01\n",
       " 6.32286996e-01 2.24215247e-02 1.92825112e-01 5.96412556e-01]\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Выборочная матрица ковариаций:\n",
-      "S = \n",
+      "\n",
+      "Выборочная матрица ковариаций S:\n",
       "[[ 1.37004337e+00  1.16800106e-01  1.50074646e-01 -5.47688894e-02\n",
       "   2.71134339e-01  8.70033718e-02 -1.18259784e-02 -7.66809477e-02\n",
       "   1.52410694e-02  6.79377612e-02  3.88052162e-04  3.37824934e-02\n",
@@ -877,17 +803,17 @@
       " -1.18217731e-01  7.78067512e-01  3.63196091e-01  3.90968875e-01]\n",
       "\n",
       "Выборочные средние значения ДФ (векторы z):\n",
-      "z1_mean = 4.482757560991771\n",
-      "z2_mean = 2.8968700630235236\n",
+      "z1_mean = 4.482757560991762\n",
+      "z2_mean = 2.8968700630235165\n",
       "\n",
       "Выборочная несмещённая дисперсия:\n",
-      "s_z_sqr = 1.5858874979682467\n",
+      "s_z_sqr = 1.5858874979682442\n",
       "\n",
       "Смещённая оценка расстояния Махаланобиса:\n",
-      "D_sqr = 1.5858874979682476\n",
+      "D_sqr = 1.5858874979682465\n",
       "\n",
       "Несмещённая оценка расстояния Махаланобиса\n",
-      "D_H_sqr = 1.3797191213229203\n",
+      "D_H_sqr = 1.3797191213229192\n",
       "\n"
      ]
     },
@@ -951,8 +877,8 @@
       "P(1|2) = 0.5067264573991032\n",
       "\n",
       "Теоретические оценки вероятности ошибочной классификации:\n",
-      "P^(2|1) = 0.09350320052513472\n",
-      "P^(1|2) = 0.5575941912890766\n",
+      "P^(2|1) = 0.09350320052513467\n",
+      "P^(1|2) = 0.5575941912890768\n",
       "\n",
       "Тестовая выборка\n",
       "\n"
@@ -1024,6 +950,37 @@
     "'''\n",
     "Анализ данных из репозитория\n",
     "'''\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "Получение и считывание данных из файла в двумерный список int'ов\n",
+    "'''\n",
+    "def parse_file(filename):\n",
+    "    arr = []\n",
+    "\n",
+    "    with open(filename) as file:\n",
+    "        for line in file:\n",
+    "            arr.append(list(map(int, line.strip().split())))\n",
+    "\n",
+    "    return arr\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "Разделение выборки X из репозитория на X1 (вектора из 1-го класса) и X2 (из 2-го)\n",
+    "'''\n",
+    "def split_X(X, arr, offset=0):\n",
+    "    p = X.shape[1]\n",
+    "    X1 = np.empty((0, p))\n",
+    "    X2 = np.empty((0, p))\n",
+    "\n",
+    "    for i in range(len(X)):\n",
+    "        if arr[i + offset][-1] == 1:\n",
+    "            X1 = np.append(X1, [X[i]], axis=0)\n",
+    "        else:\n",
+    "            X2 = np.append(X2, [X[i]], axis=0)\n",
+    "\n",
+    "    return X1, X2\n",
+    "\n",
     "\n",
     "\n",
     "arr = parse_file('german.data-numeric')\n",
